syntax = "proto3";

message status_request {}

message status_response
{
    string swarm_version = 1;
    string swarm_git_commit = 2;
    string swarm_id = 3;
    string uptime = 4;
    string module_status_json = 5;
    bool pbft_enabled = 6;
}
